--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="rubbish" default="all">
+<project name="battlearena" default="all">
   
   
   <property file="build.properties"/>
