--- a/build.xml
+++ b/build.xml
@@ -4,8 +4,9 @@
   
   <property file="build.properties"/>
   <!-- Uncomment the following property if no tests compilation is needed -->
-  
+  <!-- 
   <property name="skip.tests" value="true"/>
+   -->
   
   <!-- Compiler options -->
   
@@ -86,18 +87,6 @@
   <property name="project.jdk.home" value="${jdk.home.1.8}"/>
   <property name="project.jdk.bin" value="${jdk.bin.1.8}"/>
   <property name="project.jdk.classpath" value="jdk.classpath.1.8"/>
-  <!-- Register Custom Compiler Taskdefs -->
-  <property name="javac2.home" value="${idea.home}/lib"/>
-  <path id="javac2.classpath">
-    <pathelement location="${javac2.home}/javac2.jar"/>
-    <pathelement location="${javac2.home}/jdom.jar"/>
-    <pathelement location="${javac2.home}/asm-all.jar"/>
-    <pathelement location="${javac2.home}/jgoodies-forms.jar"/>
-  </path>
-  <target name="register.custom.compilers">
-    <taskdef name="javac2" classname="com.intellij.ant.Javac2" classpathref="javac2.classpath"/>
-    <taskdef name="instrumentIdeaExtensions" classname="com.intellij.ant.InstrumentIdeaExtensions" classpathref="javac2.classpath"/>
-  </target>
   
   <!-- Modules -->
   
@@ -156,15 +145,15 @@
   
   <target name="compile.module.battlearena" depends="compile.module.battlearena.production,compile.module.battlearena.tests" description="Compile module BattleArena"/>
   
-  <target name="compile.module.battlearena.production" depends="register.custom.compilers" description="Compile module BattleArena; production classes">
+  <target name="compile.module.battlearena.production" description="Compile module BattleArena; production classes">
     <mkdir dir="${battlearena.output.dir}"/>
-    <javac2 destdir="${battlearena.output.dir}" debug="${compiler.debug}" nowarn="${compiler.generate.no.warnings}" memorymaximumsize="${compiler.max.memory}" fork="true" executable="${module.jdk.bin.battlearena}/javac">
+    <javac destdir="${battlearena.output.dir}" debug="${compiler.debug}" nowarn="${compiler.generate.no.warnings}" memorymaximumsize="${compiler.max.memory}" fork="true" executable="${module.jdk.bin.battlearena}/javac">
       <compilerarg line="${compiler.args.battlearena}"/>
       <bootclasspath refid="battlearena.module.bootclasspath"/>
       <classpath refid="battlearena.module.production.classpath"/>
       <src refid="battlearena.module.sourcepath"/>
       <patternset refid="excluded.from.compilation.battlearena"/>
-    </javac2>
+    </javac>
     
     <copy todir="${battlearena.output.dir}">
       <fileset dir="${module.battlearena.basedir}/src">
@@ -174,7 +163,7 @@
     </copy>
   </target>
   
-  <target name="compile.module.battlearena.tests" depends="register.custom.compilers,compile.module.battlearena.production" description="compile module BattleArena; test classes" unless="skip.tests"/>
+  <target name="compile.module.battlearena.tests" depends="compile.module.battlearena.production" description="compile module BattleArena; test classes" unless="skip.tests"/>
   
   <target name="clean.module.battlearena" description="cleanup module">
     <delete dir="${battlearena.output.dir}"/>
