--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 buildscript {
+	ext.kotlin_version = '1.1.2-5'
+
 	repositories {
 		mavenLocal()
 		mavenCentral()
@@ -6,6 +8,7 @@ buildscript {
 		jcenter()
 	}
 	dependencies {
+		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 	}
 }
 
