--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,6 +1,22 @@
 apply plugin: "java"
+apply plugin: 'kotlin'
 
 sourceCompatibility = 1.7
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 sourceSets.main.java.srcDirs = [ "src/" ]
+buildscript {
+	ext.kotlin_version = '1.1.2-5'
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+	}
+}
+repositories {
+	mavenCentral()
+}
+dependencies {
+	compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+}
